# c_neural_net

./: .gitignore  CMakeLists.txt  README.md  main.cpp
